--- a/style.css
+++ b/style.css
@@ -121,7 +121,74 @@ header nav a:hover {
 }
 
 .form {
+  width: 100%;
+  height: 618px;
+  background-image: url("./image/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 184px;
+}
+.form .request {
+  height: 250px;
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  transform: rotate(-1.55deg);
+  flex-shrink: 0;
+}
+.form .request .input-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 239.649px;
+  height: 50.577px;
+}
+.form .request .input-wrapper label {
+  color: #a6a6a6;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-top: 44px;
+}
+.form .request .input-wrapper #phone {
+  border-radius: 5px;
+  border: 1px solid #cecece;
+  background: #fff;
+  box-shadow: 0px 4px 18px 0px rgba(0, 0, 0, 0.04);
+  color: #000;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.form .request .h1 {
+  color: #636363;
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.form .request .button {
+  margin-top: 37px;
+  width: 197.443px;
+  height: 43.018px;
+  border-radius: 2px;
+  background: #00c838;
+  color: #fff;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  border: none;
 }/*# sourceMappingURL=style.css.map */
