доделал блок с заявками и сделал блок с ценами

--- a/style.css
+++ b/style.css
@@ -1,5 +1,85 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -8,7 +88,17 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   vertical-align: baseline;
 }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
@@ -20,15 +110,20 @@ body {
   line-height: 1;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
   quotes: none;
 }
 
-blockquote:before, blockquote:after, q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
   content: "";
   content: none;
 }
@@ -129,7 +224,7 @@ header nav a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 184px;
+  gap: 300px;
 }
 .form .request {
   height: 250px;
@@ -168,6 +263,9 @@ header nav a:hover {
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  width: 240px;
+  height: 50px;
+  padding: 5px;
 }
 .form .request .h1 {
   color: #636363;
@@ -178,7 +276,7 @@ header nav a:hover {
   line-height: normal;
 }
 .form .request .button {
-  margin-top: 37px;
+  margin-top: 77px;
   width: 197.443px;
   height: 43.018px;
   border-radius: 2px;
@@ -191,4 +289,145 @@ header nav a:hover {
   font-weight: 900;
   line-height: normal;
   border: none;
-}/*# sourceMappingURL=style.css.map */
+}
+.form .request .bg-circle {
+  z-index: -1;
+  position: absolute;
+  left: -120px;
+  top: -110px;
+}
+
+.block-info {
+  position: relative;
+  width: 392px;
+  height: 301px;
+  padding: 50px 0 40px 46px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  border-radius: 11px;
+  opacity: 0.8;
+  background: rgba(255, 255, 255, 0.7);
+}
+.block-info .item-info h3 {
+  color: #0d386b;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.block-info .printing1 {
+  z-index: 3;
+  position: absolute;
+  left: 235px;
+  top: -135px;
+}
+.block-info .printing2 {
+  z-index: 3;
+  position: absolute;
+  left: 290px;
+  top: 20px;
+}
+
+.price-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+.price-container .title {
+  margin-top: 63px;
+  color: #0d386b;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+}
+.price-container .card {
+  position: relative;
+  margin-top: 35px;
+  width: 837px;
+  height: 310px;
+  border-radius: 11px;
+  background: #fff;
+  box-shadow: 0px 4px 18px 0px rgba(0, 0, 0, 0.04);
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  gap: 30px;
+  padding-bottom: 50px;
+}
+.price-container .card .left-column {
+  width: 376px;
+  display: flex;
+  flex-direction: column;
+}
+.price-container .card .right-column {
+  width: 376px;
+  display: flex;
+  flex-direction: column;
+}
+.price-container .card .card-title {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  padding: 0 30px 0 0;
+}
+.price-container .card .card-title h1 {
+  color: #0d386b;
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+}
+.price-container .card .time {
+  display: flex;
+  align-items: center;
+}
+.price-container .card .time span {
+  color: #59697a;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  opacity: 0.7;
+}
+.price-container .card .prices {
+  margin-top: 38px;
+  display: flex;
+  flex-direction: column;
+  gap: 23px;
+}
+.price-container .card .prices .price {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  color: #5c7c8d;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.price-container .card .prices .price .price-text {
+  color: #ff640d;
+  font-family: Roboto;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.price-container .card .line-center {
+  top: 130px;
+  left: 418px;
+  position: absolute;
+  width: 1px;
+  height: 184px;
+  opacity: 0.7;
+  background: #c4c4c4;
+} /*# sourceMappingURL=style.css.map */
