--- a/style.css
+++ b/style.css
@@ -1,85 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -88,17 +8,7 @@ video {
   vertical-align: baseline;
 }
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
@@ -110,20 +20,15 @@ body {
   line-height: 1;
 }
 
-ol,
-ul {
+ol, ul {
   list-style: none;
 }
 
-blockquote,
-q {
+blockquote, q {
   quotes: none;
 }
 
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
+blockquote:before, blockquote:after, q:before, q:after {
   content: "";
   content: none;
 }
@@ -134,13 +39,12 @@ table {
 }
 
 html {
-  width: 100%;
   font-family: "Roboto", sans-serif;
 }
 
 body {
   width: 100%;
-  background-color: #c4c4c4;
+  background-color: #ebeff2;
 }
 
 header {
@@ -225,6 +129,7 @@ header nav a:hover {
   align-items: center;
   justify-content: center;
   gap: 300px;
+  overflow: hidden;
 }
 .form .request {
   height: 250px;
@@ -430,4 +335,74 @@ header nav a:hover {
   height: 184px;
   opacity: 0.7;
   background: #c4c4c4;
-} /*# sourceMappingURL=style.css.map */
+}
+
+.popular-goods {
+  box-sizing: border-box;
+  position: relative;
+  margin: 105px 0 105px 0;
+  max-width: 100vw;
+  width: 100%;
+  height: 623px;
+  background-image: url(./image/popular-goods-bg.png);
+  background-size: cover;
+}
+.popular-goods .title {
+  position: relative;
+  top: 40px;
+  color: #0d386b;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+}
+.popular-goods .card-good {
+  position: absolute;
+  padding: 20px 0 0 23px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  max-width: 293px;
+  max-height: 150px;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  background-color: #fff;
+  box-shadow: 0px 4px 7px 0px rgba(0, 0, 0, 0.2);
+}
+.popular-goods .card-good .title-card {
+  color: #0d386b;
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 96%;
+}
+.popular-goods .card-good .subtitle {
+  color: #979797;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.popular-goods .seal-bg {
+  z-index: 9;
+  position: absolute;
+  top: 0px;
+  left: 400px;
+}
+.popular-goods .one {
+  top: 280px;
+  left: 220px;
+}
+.popular-goods .two {
+  top: 150px;
+  left: 830px;
+}
+.popular-goods .three {
+  top: 350px;
+  left: 1000px;
+}/*# sourceMappingURL=style.css.map */
